--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ header nav ul li {
 
 /* Hero Image */
 .hero {
-    height: 900px;
+    height: 100%;
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
