--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,7 @@ body {
     font-size: 16px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
+
 
 /* Navigation Bar */
 header {
@@ -48,6 +45,10 @@ header nav ul li {
     margin-left: 25px;
 }
 
+header a {
+    color: #ffffff;
+    text-decoration: none;
+}
 
 /* Hero Image */
 .hero {
